# edge-translators

./: .dockerignore  .gitignore  Makefile  README.md  compose.yaml  design-document.md
api/: .coverage  .coveragerc  .env.dist  Dockerfile  fetch_model.py  pyproject.toml
api/docker/: entrypoint.sh
api/fixtures/: load_all.py  users_fixtures.py
api/src/: config.py  constants.py  database.py  i18n.py  main.py
api/src/auth/: dependencies.py  model.py  router.py  service.py
api/src/elasticsearch/: client.py
api/src/embedding/: service.py
api/src/esco_helper/: client.py
api/src/matching/: dependencies.py  model.py  router.py  service.py  suggestion_service.py
api/src/rules/: dependencies.py  model.py  router.py  service.py
api/src/term/: dependencies.py  service.py
api/src/transform/: model.py  router.py
api/src/user/: dependencies copy.py  model.py  repository.py  router.py  service.py
api/src/utils/: md5.py  terminal_colors.py  tools.py
api/tests/api/auth/: test_auth.py
api/tests/api/matching/: matching-esco_experiences_not_validated.json  matching-esco_experiences_validated.json  test_matchings.py  (+2 more)
api/tests/unit/: test_matching_service.py  test_rule_service.py  test_term_service.py
ui/: .env.dist  Dockerfile  pyproject.toml
ui/.streamlit/: config.toml
ui/docker/: entrypoint.sh
ui/src/: app.py  constants.py  i18n.py  navigation.py  objects.py  state.py
ui/src/client/: ontobridge.py
ui/src/components/: dashboard.py  enhancement_courses.py  import_file.py  login.py  mapping_ontology.py  mapping_rules.py  matching_tool.py  transform.py
ui/src/model/: tree_node.py  user.py
ui/src/schemas/: rule.py
ui/src/services/: rule_service.py
(+127 files in other folders)
