[project]
name = "ui"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "elasticsearch==8.17.1",
    "pydantic[email]==2.10.6",
    "python-dotenv==1.0.1",
    "rdflib==7.1.3",
    "sentence-transformers==3.4.1",
    "sentencepiece==0.2.0",
    "stqdm==0.0.5",
    "streamlit==1.42.2",
    "streamlit-authenticator==0.4.2",
    "streamlit-extras==0.5.5"
]
[dependency-groups]
dev = [
    "black>=24.4.2",
    "pytest>=8.2.0",
    "pytest-cov>=6.0.0",
]

[tool.black]
line-length = 128

[tool.pytest.ini_options]
pythonpath = ["."]
